# animate

./: .gitignore  .render.yaml  package-lock.json  package.json
maninWorker/: pyproject.toml
maninWorker/src/: main.py  schema.py  utils.py
server/: pyproject.toml  requirements.txt
server/migrations/: env.py
server/src/: database.py  llm.py  main.py  models.py  schemas.py  utils.py
server/src/auth/: auth_routes.py  check_auth.py  jwt.py
server/src/users/: crud.py
src/app/: Home.css  globals.css  layout.tsx  page.tsx
src/app/generate/: layout.tsx  page.tsx
src/components/custom/: Header.tsx  LoginDialog.tsx  SignupDialog.tsx
src/context/: AuthContext.tsx
